--- a/readme.org
+++ b/readme.org
@@ -10,7 +10,9 @@ gocryptfs.el is a tool to easily mount and unmount an encrypted folder to store 
 This package is inspired by the [[https://github.com/abougouffa/minemacs/blob/main/elisp/ecryptfs.el][code embedded in abougouffa's minemacs distribution]].
 
 * Requirements
-- [[https://github.com/rfjakob/gocryptfs][gocryptfs]] :: =sudo pacman -S gocryptfs=
+- install [[https://github.com/rfjakob/gocryptfs][gocryptfs]]
+  =sudo pacman -S gocryptfs=
+
 - Initialize new encrypted filesystem
 #+begin_src shell
 gocryptfs -init [OPTIONS] CIPHERDIR
