--- a/readme.org
+++ b/readme.org
@@ -11,12 +11,15 @@ This package is inspired by the [[https://github.com/abougouffa/minemacs/blob/ma
 
 * Requirements
 - install [[https://github.com/rfjakob/gocryptfs][gocryptfs]]
+
   =sudo pacman -S gocryptfs=
 
 - Initialize new encrypted filesystem
-#+begin_src shell
-gocryptfs -init [OPTIONS] CIPHERDIR
-#+end_src
+
+  #+begin_src shell
+  gocryptfs -init [OPTIONS] CIPHERDIR
+  #+end_src
+
   see [[https://github.com/rfjakob/gocryptfs/blob/master/Documentation/MANPAGE.md#initialize-new-encrypted-filesystem][manpage]]
 
 * Installation
@@ -25,6 +28,9 @@ gocryptfs -init [OPTIONS] CIPHERDIR
    :straight (:local-repo "~/your folder/gocryptfs"))
 #+end_src
 
+* Use
+
+./assets/demo.mp4
 
 * Project
 - [ ] add init auto
